--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -143,15 +143,10 @@
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Source text changed in size from 15 word(s) to 16 id(s): [8, 23, 13, 31, 4, 32, 7, 27, 25, 22, 13, 16, 20, 18, 30, 1]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-f6597a3286e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mDON\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mT\u001b[0m \u001b[0mMODIFY\u001b[0m \u001b[0mANYTHING\u001b[0m \u001b[0mIN\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mCELL\u001b[0m \u001b[0mTHAT\u001b[0m \u001b[0mIS\u001b[0m \u001b[0mBELOW\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mLINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \"\"\"\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_text_to_ids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_to_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/dmitry/udacity/nd101/pr04/language-translation/problem_unittests.py\u001b[0m in \u001b[0;36mtest_text_to_ids\u001b[0;34m(text_to_ids)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msource_changed_length\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         'Source text changed in size from {} word(s) to {} id(s): {}'.format(\n\u001b[0;32m---> 41\u001b[0;31m             len(source_changed_length[0][0].split()), len(source_changed_length[0][1]), source_changed_length[0][1])\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mtarget_missing_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mword_ids\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword_ids\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_target_id_seq\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mword_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mtarget_vocab_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'<EOS>'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Source text changed in size from 15 word(s) to 16 id(s): [8, 23, 13, 31, 4, 32, 7, 27, 25, 22, 13, 16, 20, 18, 30, 1]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
      ]
     }
    ],
@@ -171,11 +166,11 @@
     "    target_sentences = target_text.split('\\n')\n",
     "    \n",
     "    for source_sentence in source_sentences:\n",
-    "        source_sentence += ' <EOS>'\n",
     "        tmp = [source_vocab_to_int[i] for i in source_sentence.split()]\n",
     "        source_text_ids.append(tmp)\n",
     "\n",
     "    for target_sentence in target_sentences:\n",
+    "        target_sentence += ' <EOS>'\n",
     "        tmp = [target_vocab_to_int[i] for i in target_sentence.split()]\n",
     "        target_text_ids.append(tmp)\n",
     "\n",
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -227,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -257,13 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -290,7 +294,7 @@
     "editable": true
    },
    "source": [
-    "## Build the Neural Network\n",
+    "keep_prob## Build the Neural Network\n",
     "You'll build the components necessary to build a Sequence-to-Sequence model by implementing the following functions below:\n",
     "- `model_inputs`\n",
     "- `process_decoding_input`\n",
@@ -313,21 +317,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate, keep probability)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    inp = tf.placeholder(tf.int32, [None, None], name=\"input\")\n",
+    "    targ = tf.placeholder(tf.int32, [None, None], name=\"targets\")\n",
+    "    lr = tf.placeholder(tf.float32, name=\"learning_rate\")\n",
+    "    kp = tf.placeholder(tf.float32, name=\"keep_prob\")\n",
+    "    return inp, targ, lr, kp\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
