--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -363,13 +363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoding_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -379,8 +387,8 @@
     "    :param batch_size: Batch Size\n",
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    tmp = tf.strided_slice(target_data, [0,0], [batch_size, -1], [1, 1])\n",
+    "    return tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), tmp], 1)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -401,13 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def encoding_layer(rnn_inputs, rnn_size, num_layers, keep_prob):\n",
     "    \"\"\"\n",
@@ -418,8 +434,15 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: RNN state\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    cell = tf.contrib.rnn.LSTMCell(rnn_size, state_is_tuple=True)\n",
+    "    cell = tf.contrib.rnn.DropoutWrapper(cell, output_keep_prob=keep_prob)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
+    "    \n",
+    "    initial_state = cell.zero_state(rnn_inputs.shape[0], tf.float32)\n",
+    "    \n",
+    "    outputs, state = tf.nn.dynamic_rnn(cell, rnn_inputs, initial_state=initial_state)\n",
+    "\n",
+    "    return state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
