--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -434,13 +434,14 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: RNN state\n",
     "    \"\"\"\n",
+    "    \n",
     "    cell = tf.contrib.rnn.LSTMCell(rnn_size, state_is_tuple=True)\n",
     "    cell = tf.contrib.rnn.DropoutWrapper(cell, output_keep_prob=keep_prob)\n",
     "    cell = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
     "    \n",
     "    initial_state = cell.zero_state(rnn_inputs.shape[0], tf.float32)\n",
     "    \n",
-    "    outputs, state = tf.nn.dynamic_rnn(cell, rnn_inputs, initial_state=initial_state)\n",
+    "    __, state = tf.nn.dynamic_rnn(cell, rnn_inputs, initial_state=initial_state)\n",
     "\n",
     "    return state\n",
     "\n",
@@ -463,13 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_train(encoder_state, dec_cell, dec_embed_input, sequence_length, decoding_scope,\n",
     "                         output_fn, keep_prob):\n",
@@ -484,8 +493,16 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: Train Logits\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    decoder_fn = tf.contrib.seq2seq.simple_decoder_fn_train(encoder_state, name=None)\n",
+    "    train_pred, __, __ = tf.contrib.seq2seq.dynamic_rnn_decoder(\n",
+    "        cell=dec_cell,\n",
+    "        decoder_fn=decoder_fn,\n",
+    "        inputs=dec_embed_input,\n",
+    "        sequence_length=sequence_length,\n",
+    "        scope=decoding_scope,\n",
+    "    )\n",
+    "    # not sure what to do with keep_prob\n",
+    "    return output_fn(train_pred)\n",
     "\n",
     "\n",
     "\"\"\"\n",
