--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -524,13 +524,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, start_of_sequence_id, end_of_sequence_id,\n",
     "                         maximum_length, vocab_size, decoding_scope, output_fn, keep_prob):\n",
@@ -548,8 +556,21 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: Inference Logits\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    inf_decoder = tf.contrib.seq2seq.simple_decoder_fn_inference(\n",
+    "        output_fn=output_fn,\n",
+    "        encoder_state=encoder_state,\n",
+    "        embeddings=dec_embeddings,\n",
+    "        start_of_sequence_id=start_of_sequence_id,\n",
+    "        end_of_sequence_id=end_of_sequence_id,\n",
+    "        maximum_length=maximum_length,\n",
+    "        num_decoder_symbols=vocab_size,\n",
+    "    )\n",
+    "    out, __, __ = tf.contrib.seq2seq.dynamic_rnn_decoder(\n",
+    "        cell=dec_cell,\n",
+    "        decoder_fn=inf_decoder,\n",
+    "        scope=decoding_scope,\n",
+    "    )\n",
+    "    return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
