--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -599,13 +599,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer(dec_embed_input, dec_embeddings, encoder_state, vocab_size, sequence_length, rnn_size,\n",
     "                   num_layers, target_vocab_to_int, keep_prob):\n",
@@ -622,8 +630,40 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: Tuple of (Training Logits, Inference Logits)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    cell = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "        \n",
+    "    dec_cell = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
+    "    \n",
+    "    with tf.variable_scope(\"decoding\") as decoding_scope:\n",
+    "    \n",
+    "        output_fn = lambda x: tf.contrib.layers.fully_connected(x,\n",
+    "                                    vocab_size, None, scope=decoding_scope)\n",
+    "        dlt = decoding_layer_train(\n",
+    "            encoder_state=encoder_state,\n",
+    "            dec_cell=dec_cell,\n",
+    "            dec_embed_input=dec_embed_input,\n",
+    "            sequence_length=sequence_length,\n",
+    "            decoding_scope=decoding_scope,\n",
+    "            output_fn=output_fn,\n",
+    "            keep_prob=keep_prob,\n",
+    "        )\n",
+    "        \n",
+    "    with tf.variable_scope(\"decoding\", reuse=True) as decoding_scope:\n",
+    "        #print(len(target_vocab_to_int))\n",
+    "        dli = decoding_layer_infer(\n",
+    "            encoder_state=encoder_state,\n",
+    "            dec_cell=dec_cell,\n",
+    "            dec_embeddings=dec_embeddings,\n",
+    "            start_of_sequence_id=target_vocab_to_int['<GO>'],\n",
+    "            end_of_sequence_id=target_vocab_to_int['<EOS>'],\n",
+    "            maximum_length=sequence_length,\n",
+    "            vocab_size=vocab_size,\n",
+    "            decoding_scope=decoding_scope,\n",
+    "            output_fn=output_fn,\n",
+    "            keep_prob=keep_prob\n",
+    "        )\n",
+    "        \n",
+    "    return dlt, dli\n",
     "\n",
     "\n",
     "\"\"\"\n",
