--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -439,9 +439,9 @@
     "    cell = tf.contrib.rnn.DropoutWrapper(cell, output_keep_prob=keep_prob)\n",
     "    cell = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
     "    \n",
-    "    initial_state = cell.zero_state(rnn_inputs.shape[0], tf.float32)\n",
+    "    #initial_state = cell.zero_state(rnn_inputs.shape[0], tf.float32)\n",
     "    \n",
-    "    __, state = tf.nn.dynamic_rnn(cell, rnn_inputs, initial_state=initial_state)\n",
+    "    __, state = tf.nn.dynamic_rnn(cell, rnn_inputs, dtype=tf.float32)\n",
     "\n",
     "    return state\n",
     "\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -630,6 +630,7 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: Tuple of (Training Logits, Inference Logits)\n",
     "    \"\"\"\n",
+    "\n",
     "    cell = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "        \n",
     "    dec_cell = tf.contrib.rnn.MultiRNNCell([cell] * num_layers)\n",
@@ -691,13 +692,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size, sequence_length, source_vocab_size, target_vocab_size,\n",
     "                  enc_embedding_size, dec_embedding_size, rnn_size, num_layers, target_vocab_to_int):\n",
@@ -717,8 +726,34 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: Tuple of (Training Logits, Inference Logits)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    rnn_inputs = tf.contrib.layers.embed_sequence(\n",
+    "        ids=input_data,\n",
+    "        vocab_size=source_vocab_size,\n",
+    "        embed_dim=enc_embedding_size\n",
+    "    )\n",
+    "    \n",
+    "    encoder_state = encoding_layer(rnn_inputs, rnn_size, num_layers, keep_prob)\n",
+    "    \n",
+    "    dec_input = process_decoding_input(target_data, target_vocab_to_int, batch_size)\n",
+    "\n",
+    "    dec_embeddings = tf.Variable(tf.random_uniform([target_vocab_size, dec_embedding_size]))\n",
+    "    dec_embed_input = tf.nn.embedding_lookup(dec_embeddings, dec_input)\n",
+    "\n",
+    "    vocab_size = target_vocab_size\n",
+    "\n",
+    "    out = decoding_layer(\n",
+    "        dec_embed_input,\n",
+    "        dec_embeddings,\n",
+    "        encoder_state,\n",
+    "        vocab_size,\n",
+    "        sequence_length,\n",
+    "        rnn_size,\n",
+    "        num_layers,\n",
+    "        target_vocab_to_int,\n",
+    "        keep_prob)\n",
+    "\n",
+    "    return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
