sentence_to_seq

--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -794,20 +794,20 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 2\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 4096\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 300\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 3\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 50\n",
+    "decoding_embedding_size = 50\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = .05\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None"
+    "keep_probability = 0.75"
    ]
   },
   {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -878,14 +878,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/33 - Train Accuracy:  0.307, Validation Accuracy:  0.306, Loss:  5.861\n",
+      "Epoch   0 Batch    1/33 - Train Accuracy:  0.178, Validation Accuracy:  0.178, Loss:  6.967\n",
+      "Epoch   0 Batch    2/33 - Train Accuracy:  0.316, Validation Accuracy:  0.314, Loss:  9.285\n",
+      "Epoch   0 Batch    3/33 - Train Accuracy:  0.172, Validation Accuracy:  0.210, Loss:  7.151\n",
+      "Epoch   0 Batch    4/33 - Train Accuracy:  0.207, Validation Accuracy:  0.208, Loss:  5.882\n",
+      "Epoch   0 Batch    5/33 - Train Accuracy:  0.245, Validation Accuracy:  0.247, Loss:  5.173\n",
+      "Epoch   0 Batch    6/33 - Train Accuracy:  0.311, Validation Accuracy:  0.309, Loss:  4.243\n",
+      "Epoch   0 Batch    7/33 - Train Accuracy:  0.311, Validation Accuracy:  0.309, Loss:  3.533\n",
+      "Epoch   0 Batch    8/33 - Train Accuracy:  0.310, Validation Accuracy:  0.309, Loss:  3.669\n",
+      "Epoch   0 Batch    9/33 - Train Accuracy:  0.283, Validation Accuracy:  0.313, Loss:  3.612\n",
+      "Epoch   0 Batch   10/33 - Train Accuracy:  0.315, Validation Accuracy:  0.313, Loss:  3.352\n",
+      "Epoch   0 Batch   11/33 - Train Accuracy:  0.306, Validation Accuracy:  0.333, Loss:  3.380\n",
+      "Epoch   0 Batch   12/33 - Train Accuracy:  0.307, Validation Accuracy:  0.340, Loss:  3.340\n",
+      "Epoch   0 Batch   13/33 - Train Accuracy:  0.341, Validation Accuracy:  0.340, Loss:  3.197\n",
+      "Epoch   0 Batch   14/33 - Train Accuracy:  0.315, Validation Accuracy:  0.345, Loss:  3.232\n",
+      "Epoch   0 Batch   15/33 - Train Accuracy:  0.324, Validation Accuracy:  0.353, Loss:  3.209\n",
+      "Epoch   0 Batch   16/33 - Train Accuracy:  0.322, Validation Accuracy:  0.351, Loss:  3.097\n",
+      "Epoch   0 Batch   17/33 - Train Accuracy:  0.318, Validation Accuracy:  0.318, Loss:  3.041\n",
+      "Epoch   0 Batch   18/33 - Train Accuracy:  0.342, Validation Accuracy:  0.341, Loss:  3.198\n",
+      "Epoch   0 Batch   19/33 - Train Accuracy:  0.340, Validation Accuracy:  0.339, Loss:  2.973\n",
+      "Epoch   0 Batch   20/33 - Train Accuracy:  0.310, Validation Accuracy:  0.342, Loss:  3.108\n",
+      "Epoch   0 Batch   21/33 - Train Accuracy:  0.343, Validation Accuracy:  0.343, Loss:  2.998\n",
+      "Epoch   0 Batch   22/33 - Train Accuracy:  0.423, Validation Accuracy:  0.366, Loss:  2.653\n",
+      "Epoch   0 Batch   23/33 - Train Accuracy:  0.309, Validation Accuracy:  0.342, Loss:  3.062\n",
+      "Epoch   0 Batch   24/33 - Train Accuracy:  0.317, Validation Accuracy:  0.347, Loss:  3.019\n",
+      "Epoch   0 Batch   25/33 - Train Accuracy:  0.348, Validation Accuracy:  0.345, Loss:  2.903\n",
+      "Epoch   0 Batch   26/33 - Train Accuracy:  0.349, Validation Accuracy:  0.345, Loss:  2.867\n",
+      "Epoch   0 Batch   27/33 - Train Accuracy:  0.404, Validation Accuracy:  0.346, Loss:  2.613\n",
+      "Epoch   0 Batch   28/33 - Train Accuracy:  0.317, Validation Accuracy:  0.347, Loss:  2.977\n",
+      "Epoch   0 Batch   29/33 - Train Accuracy:  0.378, Validation Accuracy:  0.347, Loss:  2.703\n",
+      "Epoch   0 Batch   30/33 - Train Accuracy:  0.347, Validation Accuracy:  0.345, Loss:  2.793\n",
+      "Epoch   0 Batch   31/33 - Train Accuracy:  0.327, Validation Accuracy:  0.327, Loss:  2.820\n",
+      "Epoch   1 Batch    0/33 - Train Accuracy:  0.341, Validation Accuracy:  0.341, Loss:  2.796\n",
+      "Epoch   1 Batch    1/33 - Train Accuracy:  0.370, Validation Accuracy:  0.371, Loss:  2.765\n",
+      "Epoch   1 Batch    2/33 - Train Accuracy:  0.343, Validation Accuracy:  0.344, Loss:  2.761\n",
+      "Epoch   1 Batch    3/33 - Train Accuracy:  0.315, Validation Accuracy:  0.346, Loss:  2.838\n",
+      "Epoch   1 Batch    4/33 - Train Accuracy:  0.329, Validation Accuracy:  0.327, Loss:  2.700\n",
+      "Epoch   1 Batch    5/33 - Train Accuracy:  0.362, Validation Accuracy:  0.358, Loss:  2.684\n",
+      "Epoch   1 Batch    6/33 - Train Accuracy:  0.323, Validation Accuracy:  0.324, Loss:  2.694\n",
+      "Epoch   1 Batch    7/33 - Train Accuracy:  0.345, Validation Accuracy:  0.346, Loss:  2.832\n",
+      "Epoch   1 Batch    8/33 - Train Accuracy:  0.343, Validation Accuracy:  0.344, Loss:  2.678\n",
+      "Epoch   1 Batch    9/33 - Train Accuracy:  0.288, Validation Accuracy:  0.320, Loss:  2.830\n",
+      "Epoch   1 Batch   10/33 - Train Accuracy:  0.333, Validation Accuracy:  0.334, Loss:  2.691\n",
+      "Epoch   1 Batch   11/33 - Train Accuracy:  0.301, Validation Accuracy:  0.330, Loss:  2.792\n",
+      "Epoch   1 Batch   12/33 - Train Accuracy:  0.320, Validation Accuracy:  0.353, Loss:  2.791\n",
+      "Epoch   1 Batch   13/33 - Train Accuracy:  0.304, Validation Accuracy:  0.304, Loss:  2.642\n",
+      "Epoch   1 Batch   14/33 - Train Accuracy:  0.319, Validation Accuracy:  0.350, Loss:  2.859\n",
+      "Epoch   1 Batch   15/33 - Train Accuracy:  0.306, Validation Accuracy:  0.337, Loss:  2.836\n",
+      "Epoch   1 Batch   16/33 - Train Accuracy:  0.307, Validation Accuracy:  0.337, Loss:  2.761\n",
+      "Epoch   1 Batch   17/33 - Train Accuracy:  0.337, Validation Accuracy:  0.337, Loss:  2.689\n",
+      "Epoch   1 Batch   18/33 - Train Accuracy:  0.334, Validation Accuracy:  0.332, Loss:  2.652\n",
+      "Epoch   1 Batch   19/33 - Train Accuracy:  0.345, Validation Accuracy:  0.346, Loss:  2.620\n",
+      "Epoch   1 Batch   20/33 - Train Accuracy:  0.311, Validation Accuracy:  0.343, Loss:  2.751\n",
+      "Epoch   1 Batch   21/33 - Train Accuracy:  0.340, Validation Accuracy:  0.341, Loss:  2.604\n",
+      "Epoch   1 Batch   22/33 - Train Accuracy:  0.390, Validation Accuracy:  0.334, Loss:  2.350\n",
+      "Epoch   1 Batch   23/33 - Train Accuracy:  0.314, Validation Accuracy:  0.347, Loss:  2.713\n",
+      "Epoch   1 Batch   24/33 - Train Accuracy:  0.315, Validation Accuracy:  0.347, Loss:  2.665\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-d7dd20c512f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m                  \u001b[0mlr\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m                  \u001b[0msequence_length\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtarget_batch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m                  keep_prob: keep_probability})\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             batch_train_logits = sess.run(\n",
+      "\u001b[0;32m/home/dmitry/miniconda3/envs/dlnd-tf-lab/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    765\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    766\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 767\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    768\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    769\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dmitry/miniconda3/envs/dlnd-tf-lab/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    963\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 965\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    966\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dmitry/miniconda3/envs/dlnd-tf-lab/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1013\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1014\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1015\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1016\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1017\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[0;32m/home/dmitry/miniconda3/envs/dlnd-tf-lab/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1020\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1021\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1022\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1023\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1024\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dmitry/miniconda3/envs/dlnd-tf-lab/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1002\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1003\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1004\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1005\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -1028,13 +1108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -1043,8 +1131,15 @@
     "    :param vocab_to_int: Dictionary to go from the words to an id\n",
     "    :return: List of word ids\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    out = []\n",
+    "    for w in sentence.split():\n",
+    "        lw = w.lower()\n",
+    "        try:\n",
+    "            id = vocab_to_int[lw]\n",
+    "        except KeyError:\n",
+    "            id = vocab_to_int['<UNK>']\n",
+    "        out.append(id)\n",
+    "    return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
